[package]
name = "rockettest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json", "uuid"]}
rand = "0.8.5"
hex = "0.4.3"
jwt = { version = "0.16.0", features = ["openssl"]}
chrono = "0.4.23"
hmac = "0.12.1"
sha2 = "0.10.6"
serde_json = "1.0.89"
bcrypt = "0.14"
lazy_static = "1.4.0"
openssl = "0.10.48"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde", 			 # Enable (de)serialization of uuids
]
